[gd_scene load_steps=6 format=2]

[ext_resource path="res://traps/GenericTrap.tscn" type="PackedScene" id=1]
[ext_resource path="res://traps/sprites/MovingZone.png" type="Texture" id=2]
[ext_resource path="res://traps/GenericMovingZone.gd" type="Script" id=3]
[ext_resource path="res://effects/PulseTween.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 11 )

[node name="GenericMovingZone" groups=["trap"] instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Top" type="Sprite" parent="." index="3"]
modulate = Color( 0.188235, 0.25098, 0.54902, 1 )
position = Vector2( 16, 16 )
texture = ExtResource( 2 )
vframes = 3
frame = 2

[node name="Center" type="Node2D" parent="." index="4"]
position = Vector2( 16, 48 )
z_index = 1

[node name="CenterSprite" type="Sprite" parent="Center" index="0"]
texture = ExtResource( 2 )
vframes = 3
frame = 1

[node name="Area2D" type="Area2D" parent="Center" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center/Area2D" index="0"]
shape = SubResource( 1 )

[node name="Bottom" type="Sprite" parent="." index="5"]
modulate = Color( 0.188235, 0.25098, 0.54902, 1 )
position = Vector2( 16, 80 )
texture = ExtResource( 2 )
vframes = 3

[node name="TopPulseTween" parent="." index="6" instance=ExtResource( 4 )]

[node name="BottomPulseTween" parent="." index="7" instance=ExtResource( 4 )]

[node name="TopColorTween" parent="." index="8" instance=ExtResource( 4 )]

[node name="BottomColorTween" parent="." index="9" instance=ExtResource( 4 )]
